# PydSQL

./: CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
pydsql/: column.py  generator.py  test.py
pydsql/utils/: type_inspectors.py
tests/: test_generation.py  test_generation_with_constrains.py
