[project]
name = "pydsql"
version = "0.1.0"
description = "Lightweight tool to generate SQL CREATE TABLE statements directly from Pydantic models."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "PranavKP", email = "pranavkp170@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pydantic"
    "pytest",
    "black",
    "ruff"
]